[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "migas-server"
description = "Migas telemetry server"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    {name = "Nipreps developers", email = "nipreps@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">3.10"
dependencies = [
    "aiohttp",
    "asyncpg",
    "fastapi[all]",
    "packaging",
    "redis >=4.2.0",
    "strawberry-graphql[fastapi]",
    "sqlalchemy[asyncio]",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nipreps/migas-server"

[project.optional-dependencies]
heroku = [
    "scout-apm",
]
speedups = [
    "aiohttp[speedups]",
    "redis[hiredis]",
]
geoloc = ["maxminddb"]
dev = [
    "pre-commit",
    "pip-tools",
    "hatch",
    "ruff",
]
migrations = [
    "alembic",
]
test = [
    "pytest",
]
prod = [
    "migas_server[speedups,migrations,geoloc]"
]

[project.scripts]
migas-server = "migas.server.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "migas/server/_version.py"

[tool.hatch.build.sources]
"migas/server" = "migas/server"

[tool.hatch.build.targets.wheel.force-include]
"migas/static" = "migas/static"


[tool.pytest.ini_options]
markers = [
    "network: tests that require real network connectivity",
    "geoloc: tests that require real geolocation databases",
]

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true
