[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "migas-server"
description = "Migas telemetry server"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    {name = "Nipreps developers", email = "nipreps@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">3.10"
dependencies = [
    "aiohttp",
    "asyncpg",
    "fastapi[all]",
    "packaging",
    "redis >=4.2.0",
    "strawberry-graphql[fastapi]",
    "sqlalchemy[asyncio]",
    "maxminddb",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nipreps/migas-server"

[project.optional-dependencies]
heroku = [
    "scout-apm",
]
speedups = [
    "aiohttp[speedups]",
    "redis[hiredis]",
]
dev = [
    "pre-commit",
    "hatch",
    "ruff",
    "djlint",
]
migrations = [
    "alembic",
]
test = [
    "pytest",
    "pytest-cov",
]
prod = [
    "migas_server[migrations]"
]

[project.scripts]
migas-server = "migas.server.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "migas/server/_version.py"

[tool.hatch.build.sources]
"migas/server" = "migas/server"

[tool.hatch.build.targets.wheel.force-include]
"migas/static" = "migas/static"

[tool.pytest.ini_options]
# `migas` is a namespace package (no __init__.py). Without these two
# options, pytest treats `migas/` as the rootdir and imports the tests as
# `server.tests.test_api`, while the app imports `migas.server.*` — two
# different copies of every module, breaking monkeypatch/DI overrides.
addopts = "--import-mode=importlib"
consider_namespace_packages = true
markers = [
    "network: tests that require real network connectivity",
    "geoloc: tests that require real geolocation databases",
]

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.djlint]
ignore = "H021,D018,T003,H030,H031,D004,J004,J018"
profile = "jinja"
