[options]
python_requires = >=3.10
install_requires =
    aiohttp
    aioredis
    asyncpg
    fastapi[all]
    packaging
    strawberry-graphql[fastapi]

[options.extras_require]
speedups =
    aiohttp[speedups]
    aioredis[hiredis]
dev =
    black
    isort
    pre-commit
test =
    pytest

[options.entry_points]
console_scripts =
    etelemetry-up=etelemetry_app.main:main

[versioneer]
VCS = git
style = pep440
versionfile_source = etelemetry_app/_version.py
versionfile_build = etelemetry_app/_version.py
tag_prefix =
parentdir_prefix =
