[metadata]
url = https://github.com/mgxd/migas-server
description = Migas server
license = Apache License, 2.0
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
provides =
    migas_server
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = migas_server
python_requires = >=3.10
install_requires =
    aiohttp
    redis >= 4.2.0
    asyncpg
    fastapi[all]
    packaging
    strawberry-graphql[fastapi]
    sqlalchemy[async]

[options.extras_require]
heroku =
    alembic
    scout-apm
    %(speedups)s
speedups =
    aiohttp[speedups]
    redis[hiredis]
dev =
    black
    isort
    pre-commit
test =
    pytest

[options.entry_points]
console_scripts =
    migas-server=migas_server.cli:main
